Rewrite with @effect-atom/atom-react

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "upgrade-effect": "pnpm add --save-exact effect@latest @effect/experimental@latest @effect/platform@latest @effect/cluster@latest @effect/rpc@latest @effect/workflow@latest @effect/platform-browser@latest @effect/platform-node@latest @effect/cli@latest @effect/printer@latest @effect/printer-ansi@latest @effect/typeclass@latest @effect-rx/rx-react@latest @effect/sql@latest @effect/sql-sqlite-node@latest && pnpm add -D @effect/language-service"
+        "upgrade-effect": "pnpm add --save-exact effect@latest @effect/experimental@latest @effect/platform@latest @effect/cluster@latest @effect/rpc@latest @effect/workflow@latest @effect/platform-browser@latest @effect/platform-node@latest @effect/cli@latest @effect/printer@latest @effect/printer-ansi@latest @effect/typeclass@latest @effect-atom/atom-react@latest @effect/sql@latest @effect/sql-sqlite-node@latest && pnpm add -D @effect/language-service"
     },
     "private": true,
     "devDependencies": {
@@ -53,27 +53,28 @@
         "vitest": "^3.0.0"
     },
     "dependencies": {
-        "@effect-rx/rx-react": "0.38.0",
-        "@effect/cli": "0.66.9",
-        "@effect/cluster": "0.41.13",
-        "@effect/experimental": "0.51.10",
-        "@effect/platform": "0.87.9",
-        "@effect/platform-browser": "0.67.9",
-        "@effect/platform-node": "0.89.1",
-        "@effect/printer": "0.44.12",
-        "@effect/printer-ansi": "0.44.12",
-        "@effect/rpc": "0.64.10",
-        "@effect/sql": "0.40.10",
-        "@effect/sql-sqlite-node": "0.41.10",
-        "@effect/typeclass": "0.35.12",
-        "@effect/workflow": "0.4.10",
+        "@effect-atom/atom-react": "0.3.0",
+        "@effect/cli": "0.71.0",
+        "@effect/cluster": "0.50.2",
+        "@effect/experimental": "0.56.0",
+        "@effect/platform": "0.92.1",
+        "@effect/platform-browser": "0.72.0",
+        "@effect/platform-node": "0.98.2",
+        "@effect/printer": "0.46.0",
+        "@effect/printer-ansi": "0.46.0",
+        "@effect/rpc": "0.71.0",
+        "@effect/sql": "0.46.0",
+        "@effect/sql-sqlite-node": "0.47.0",
+        "@effect/typeclass": "0.37.0",
+        "@effect/workflow": "0.11.2",
         "@paralleldrive/cuid2": "^2.2.2",
         "@tanstack/react-router": "^1.125.4",
         "@tanstack/react-router-devtools": "^1.125.4",
         "@typed/async-data": "^0.13.1",
         "clsx": "^2.1.1",
-        "effect": "3.16.12",
+        "effect": "3.18.1",
         "react": "19.0.0",
-        "react-dom": "19.0.0"
+        "react-dom": "19.0.0",
+        "react-error-boundary": "^6.0.0"
     }
 }
