--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
     "bracketSpacing": true,
     "printWidth": 120,
-    "semi": false,
+    "semi": true,
     "singleQuote": false,
     "tabWidth": 4,
     "trailingComma": "all",
